Fix bugs and add buttin " C-clear"

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="display">0</div>
     <div class="buttons">
         <button class="button btn-gray">AC</button>
-        <button class="button btn-gray">+/-</button>
         <button class="button btn-gray">%</button>
+        <button class="button btn-gray">C</button>
         <button class="button btn-green">/</button>
         <button class="button">7</button>
         <button class="button">8</button>
